cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 17)
project(Waveform)
file(GLOB_RECURSE SRCS "*.cpp" EXCLUDE PATTERN "*_test.cpp")
file(GLOB_RECURSE TEST_SRCS "*_test.cpp")
enable_testing()

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_library(waveform ${SRCS})
foreach(SRC ${TEST_SRCS})
	get_filename_component(SRC_BASE ${SRC} NAME_WLE)
	add_executable(${SRC_BASE} ${SRC})
	target_link_libraries(${SRC_BASE} waveform gtest gtest_main glog pthread)
	add_test(NAME ${SRC_BASE} COMMAND ./${SRC_BASE})
endforeach()
